[B]2.0.2[/B]
- fixed: some more cast won't get scraped under certain circumtances

[B]2.0.1[/B]
- fixed: cast won't get scraped under certain circumtances

[B]2.0.0[/B]
- changed: adapted new IMDb layout

[B]1.0.5[/B]
- fixed: tack /combined onto the end of the url to work around the new layout of IMDb