@@ -68,7 +68,7 @@
 				<expression noclean="1">&lt;table class="cast_list"&gt;(.*?)&lt;/table&gt;</expression>
 			</RegExp>
 			<RegExp input="$$6" output="&lt;actor&gt;&lt;thumb&gt;\1_SX512_SY512_\2&lt;/thumb&gt;&lt;name&gt;\3&lt;/name&gt;&lt;role&gt;\4&lt;/role&gt;&lt;/actor&gt;" dest="7">
-				<expression repeat="yes" clear="yes" fixchars="3,4" trim="3,4" noclean="1,2">&lt;img\n[^\n]*\n[^\n]*\n\s+src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"[^"]*"&gt;[^&gt;]*&gt;([^&lt;]*).*?&lt;td class="character"&gt;[^&gt;]*&gt;[^&gt;]*&gt;([^&lt;]*)?</expression>
+				<expression repeat="yes" clear="yes" trim="3,4" noclean="1,2">&lt;img\n[^\n]*\n[^\n]*\n\s+src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"[^"]*"&gt;[^&gt;]*&gt;([^&lt;]*).*?&lt;td class="character"&gt;[^&gt;]*&gt;[^&gt;]*&gt;([^&lt;]*)?</expression>
 			</RegExp>
 			<RegExp input="$$7" output="&lt;actor&gt;&lt;thumb&gt;\1&lt;/thumb&gt;\2&lt;/actor&gt;" dest="2+">
 				<expression repeat="yes" clear="yes" noclean="1,2,3">&lt;actor&gt;&lt;thumb&gt;(?:(http.*?)|_SX[0-9]+_SY[0-9]+_)&lt;/thumb&gt;(.*?)&lt;/actor&gt;</expression>
@@ -82,7 +82,7 @@
 				<expression noclean="1">&lt;table class="cast_list"&gt;(.*?)&lt;/table&gt;</expression>
 			</RegExp>
 			<RegExp input="$$6" output="&lt;actor&gt;&lt;thumb&gt;\1_SX$INFO[imdbscale]_SY$INFO[imdbscale]_\2&lt;/thumb&gt;&lt;name&gt;\3&lt;/name&gt;&lt;role&gt;\4&lt;/role&gt;&lt;/actor&gt;" dest="7">
-				<expression repeat="yes" clear="yes" fixchars="3,4" trim="3,4" noclean="1,2">&lt;img\n[^\n]*\n[^\n]*\n\s+src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"[^"]*"&gt;[^&gt;]*&gt;([^&lt;]*).*?&lt;td class="character"&gt;[^&gt;]*&gt;[^&gt;]*&gt;([^&lt;]*)?</expression>
+				<expression repeat="yes" clear="yes" trim="3,4" noclean="1,2">&lt;img\n[^\n]*\n[^\n]*\n\s+src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"[^"]*"&gt;[^&gt;]*&gt;([^&lt;]*).*?&lt;td class="character"&gt;[^&gt;]*&gt;[^&gt;]*&gt;([^&lt;]*)?</expression>
 			</RegExp>
 			<RegExp input="$$7" output="&lt;actor&gt;&lt;thumb&gt;\1&lt;/thumb&gt;\2&lt;/actor&gt;" dest="2+">
 				<expression repeat="yes" clear="yes" noclean="1,2,3">&lt;actor&gt;&lt;thumb&gt;(?:(http.*?)|_SX[0-9]+_SY[0-9]+_)&lt;/thumb&gt;(.*?)&lt;/actor&gt;</expression>
@@ -118,7 +118,7 @@
 				<expression noclean="1">&lt;table class="cast"&gt;(.*?)&lt;/table&gt;</expression>
 			</RegExp>
 			<RegExp input="$$6" output="&lt;actor&gt;&lt;thumb&gt;\1_SX512_SY512_\2&lt;/thumb&gt;&lt;name&gt;\3&lt;/name&gt;&lt;role&gt;\5&lt;/role&gt;&lt;/actor&gt;" dest="7">
-				<expression repeat="yes" clear="yes" fixchars="3,5" trim="3,5" noclean="1,2">&lt;img src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"nm"&gt;&lt;a href="[^"]*[^&gt;]*&gt;([^&lt;]*)&lt;[^"]*"ddd"&gt;([^&lt;]&lt;)?[^"]*"char"&gt;(.*?)&lt;/td&gt;</expression>
+				<expression repeat="yes" clear="yes" trim="3,5" noclean="1,2">&lt;img src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"nm"&gt;&lt;a href="[^"]*[^&gt;]*&gt;([^&lt;]*)&lt;[^"]*"ddd"&gt;([^&lt;]&lt;)?[^"]*"char"&gt;(.*?)&lt;/td&gt;</expression>
 			</RegExp>
 			<RegExp input="$$7" output="&lt;actor&gt;&lt;thumb&gt;\1&lt;/thumb&gt;\2&lt;/actor&gt;" dest="2+">
 				<expression repeat="yes" clear="yes" noclean="1,2,3">&lt;actor&gt;&lt;thumb&gt;(?:(http.*?)|_SX[0-9]+_SY[0-9]+_)&lt;/thumb&gt;(.*?)&lt;/actor&gt;</expression>
@@ -132,7 +132,7 @@
 				<expression noclean="1">&lt;table class="cast"&gt;(.*?)&lt;/table&gt;</expression>
 			</RegExp>
 			<RegExp input="$$6" output="&lt;actor&gt;&lt;thumb&gt;\1_SX$INFO[imdbscale]_SY$INFO[imdbscale]_\2&lt;/thumb&gt;&lt;name&gt;\3&lt;/name&gt;&lt;role&gt;\5&lt;/role&gt;&lt;/actor&gt;" dest="7">
-				<expression repeat="yes" clear="yes" fixchars="3,5" trim="3,5" noclean="1,2">&lt;img src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"nm"&gt;&lt;a href="[^"]*[^&gt;]*&gt;([^&lt;]*)&lt;[^"]*"ddd"&gt;([^&lt;]&lt;)?[^"]*"char"&gt;(.*?)&lt;/td&gt;</expression>
+				<expression repeat="yes" clear="yes" trim="3,5" noclean="1,2">&lt;img src="(?:([^"]*\.)[^"]*(\.jpg))?[^&gt;]*[^"]*"nm"&gt;&lt;a href="[^"]*[^&gt;]*&gt;([^&lt;]*)&lt;[^"]*"ddd"&gt;([^&lt;]&lt;)?[^"]*"char"&gt;(.*?)&lt;/td&gt;</expression>
 			</RegExp>
 			<RegExp input="$$7" output="&lt;actor&gt;&lt;thumb&gt;\1&lt;/thumb&gt;\2&lt;/actor&gt;" dest="2+">
 				<expression repeat="yes" clear="yes" noclean="1,2,3">&lt;actor&gt;&lt;thumb&gt;(?:(http.*?)|_SX[0-9]+_SY[0-9]+_)&lt;/thumb&gt;(.*?)&lt;/actor&gt;</expression>
